--- a/TierPension/TierPension/View/MainWindow.xaml
+++ b/TierPension/TierPension/View/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Width="{x:Static SystemParameters.PrimaryScreenWidth}"
         Height="{x:Static SystemParameters.PrimaryScreenHeight}"
-        Title="MainWindow"
+        Title="TierPension"
         >
 
     <Window.Background>
