--- a/TierPension/TierPension/View/TierPensionierenDialog.xaml
+++ b/TierPension/TierPension/View/TierPensionierenDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TierPension.View"
         mc:Ignorable="d"
-        Title="TierPensionierenDialog" 
+        Title="Tier-Pensionieren" 
         >
     <Grid Margin="20">
         <Grid.ColumnDefinitions>
